fix: support jdk 8 (#497)
Co-authored-by: Kent Dong <ch3cho@qq.com>